Config file Updated

--- a/Configuration_3/Config.properties
+++ b/Configuration_3/Config.properties
@@ -4,3 +4,5 @@ Staging_URL=hhttps://demo.actitime.com/login.do
 Prod_URL=https://opensource-demo.orangehrmlive.com/
 TestData_File_Name=/TestData_3/Test_Data1.xlsx
 ExpectedSaveMessage=Save
+Course=Selenium
+Trainer=Mukesh
