--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 			        <version>3.0.0-M7</version>
 			        <configuration>
 			          <suiteXmlFiles>
-			            <suiteXmlFile>XMLFiles_3/Framework3.xml</suiteXmlFile>
+			            <suiteXmlFile>XMLFiles_3/${xmlfile}</suiteXmlFile>
 			          </suiteXmlFiles>
 			        </configuration>
 			      </plugin>
@@ -58,7 +58,7 @@
 		 <plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-compiler-plugin</artifactId>
-		        <version>3.8.1</version>
+		        <version>3.10.1</version>
 		        <configuration>
 		          <source>1.8</source>
 		          <target>1.8</target>
